--- a/readme.org
+++ b/readme.org
@@ -4,7 +4,7 @@
 #+date: <2021-06-21 Mon>
 #+export_file_name: ~/Repos/keke-cute.github.io/emacs.html
 #+options: creator:t author:t
-#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="me.css" /> <a href="index.html">🏠 Back To Home</a>
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="static/me.css" /> <a href="index.html">🏠 Back To Home</a>
 #+PROPERTY: header-args:emacs-lisp :tangle (concat temporary-file-directory "init.el") :lexical t
 * File Header                                            :noexport:
 
@@ -664,7 +664,7 @@
        (setq org-static-blog-page-header
              "<meta name=\"author\" content=\"keke\">
      <meta name=\"referrer\" content=\"no-referrer\">
-     <link href= \"blog.css\" rel=\"stylesheet\" type=\"text/css\" />
+     <link href= \"static/blog.css\" rel=\"stylesheet\" type=\"text/css\" />
      <link rel=\"icon\" href=\"static/favicon.ico\">")
      
        ;; This preamble is inserted at the beginning of the <body> of every page:
@@ -677,8 +677,8 @@
        ;; This postamble is inserted at the end of the <body> of every page:
        ;;   This particular HTML creates a <div> with a link to the archive page
        ;;   and a licensing stub.
-       (setq org-static-blog-page-postamble
-             "<center><a rel=\"license\" href=\"https://creativecommons.org/licenses/by-sa/3.0/\"><img alt=\"Creative Commons License\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by-sa/3.0/88x31.png\" /></a><br /><span xmlns:dct=\"https://purl.org/dc/terms/\" href=\"https://purl.org/dc/dcmitype/Text\" property=\"dct:title\" rel=\"dct:type\">Ethereal Horizon</span> by <a xmlns:cc=\"https://creativecommons.org/ns#\" href=\"https://github.com/keke-cute\" property=\"cc:attributionName\" rel=\"cc:attributionURL\">不可视界线</a> is licensed under a <a rel=\"license\" href=\"https://creativecommons.org/licenses/by-sa/3.0/\">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</center>")
+       ;;(setq org-static-blog-page-postamble
+       ;;      "<center>By Keke</center>")
      
        ;; This HTML code is inserted into the index page between the preamble and
        ;;   the blog posts
